[gd_scene load_steps=20 format=1]

[ext_resource path="res://script/perilaku-1.gd" type="Script" id=1]
[ext_resource path="res://images/Background/background-daylight.png" type="Texture" id=2]
[ext_resource path="res://images/logo_4.png" type="Texture" id=3]
[ext_resource path="res://images/title-perilaku_03.png" type="Texture" id=4]
[ext_resource path="res://font/BebasNeue-48.fnt" type="BitmapFont" id=5]
[ext_resource path="res://images/NEW/icon-prila_04.png" type="Texture" id=6]
[ext_resource path="res://font/BebasNeue.fnt" type="BitmapFont" id=7]
[ext_resource path="res://images/perilaku/Perlengkpan_02.png" type="Texture" id=8]
[ext_resource path="res://images/NEW/icon-prila_03.png" type="Texture" id=9]
[ext_resource path="res://images/info_14.png" type="Texture" id=10]
[ext_resource path="res://images/Bahan-21_12.png" type="Texture" id=11]
[ext_resource path="res://images/info_16.png" type="Texture" id=12]
[ext_resource path="res://images/Bahan-21_13.png" type="Texture" id=13]
[ext_resource path="res://images/info_17.png" type="Texture" id=14]
[ext_resource path="res://images/Bahan-21_14.png" type="Texture" id=15]
[ext_resource path="res://images/1layout-popup.png" type="Texture" id=16]
[ext_resource path="res://images/layout-popup_06.png" type="Texture" id=17]
[ext_resource path="res://images/layout-popup_07.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]

resource/name = "positionContainer"
length = 0.75
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 321 ), Vector2( -800, 321 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "disabled_button"
}, {
"args": [  ],
"method": "enabled_button"
} ]
}

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 2.0
margin/right = 40.0
margin/bottom = 42.0
script/script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 798.0
margin/bottom = 1281.0

[node name="TextureFrame" type="TextureFrame" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1280.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 9627.0
margin/bottom = 1262.0
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 9627.0
margin/bottom = 213.0
custom_constants/margin_top = 20
custom_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer/MarginContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 20.0
margin/right = 9627.0
margin/bottom = 213.0
custom_constants/separation = 30
alignment = 0

[node name="TextureFrame" type="TextureFrame" parent="Container/VBoxContainer/MarginContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 137.0
margin/bottom = 193.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="Container/VBoxContainer/MarginContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 0.0
margin/right = 724.0
margin/bottom = 193.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="Container/VBoxContainer"]

visibility/blend_mode = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 217.0
margin/right = 9627.0
margin/bottom = 1060.0

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer/PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 9620.0
margin/bottom = 836.0
alignment = 0

[node name="MarginContainer4" type="MarginContainer" parent="Container/VBoxContainer/PanelContainer/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 821.0
margin/bottom = 829.0
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer4"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 20.0
margin/right = 771.0
margin/bottom = 809.0
custom_constants/separation = 20
alignment = 0

[node name="Label 2" type="Label" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer4/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 741.0
margin/bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "Memanfaatkan Tempat Sebagaimana Mestinya"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer4/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 741.0
margin/bottom = 427.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Label1" type="Label" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer4/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 447.0
margin/right = 741.0
margin/bottom = 710.0
custom_fonts/font = ExtResource( 7 )
text = "Beberapa tempat yang biasa digunakan oleh pejalan kaki 
adah alun-alun, lapangan, dan trotoar. Demi menjaga 
fasilitas publik tetap nyaman dan juga aman, ada baiknya 
untuk tetap menggunakan tempat-tempat tersebut 
sebagaimana mestinya. Hal ini akan sangat mendukung 
terciptanya kenyamanan bagi siapa saja yang melihat 
dan juga keindahan kota yang harus selalu kita jaga."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer 2" type="MarginContainer" parent="Container/VBoxContainer/PanelContainer/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 825.0
margin/top = 0.0
margin/right = 1586.0
margin/bottom = 829.0
custom_constants/margin_right = 67
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 20.0
margin/right = 694.0
margin/bottom = 809.0
custom_constants/separation = 20
alignment = 0

[node name="Label 2" type="Label" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer 2/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 644.0
margin/bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "Ikut Menjaga Kebersihan"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer 2/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 644.0
margin/bottom = 468.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="Label1" type="Label" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer 2/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 488.0
margin/right = 644.0
margin/bottom = 789.0
custom_fonts/font = ExtResource( 7 )
text = "Hal ini menjadi penting, sebab dengan  menjaga 
kebersihan di tempat pejalan kaki akan sangat
 mendukung terciptanya kenyamanan bagi siapa 
saja yang berjalan di situ. Jika Anda memiliki sampah 
seperti kaleng minuman, kemasan makanan ringan,
 plastik, dan lain sebagainya, alangkah baiknya jika 
Anda menyimpan dan membawa sampah tersebut 
sampai anda menemukan tempat sampah."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer5" type="MarginContainer" parent="Container/VBoxContainer/PanelContainer/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1590.0
margin/top = 0.0
margin/right = 2343.0
margin/bottom = 829.0
custom_constants/margin_right = 59
custom_constants/margin_top = 20
custom_constants/margin_left = 90
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer5"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 20.0
margin/right = 694.0
margin/bottom = 809.0
custom_constants/separation = 20
alignment = 0

[node name="Label 2" type="Label" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer5/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 604.0
margin/bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "Menyebrang Jalan Pada Tempatnya"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer5/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 604.0
margin/bottom = 427.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="Label1" type="Label" parent="Container/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer5/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 447.0
margin/right = 604.0
margin/bottom = 710.0
custom_fonts/font = ExtResource( 7 )
text = "Sering kita temui banyaknya pejalan kaki yang
menyebrang jalan sembarangan, hal ini sering
dijumpai oleh para pejalan kaki di jalanan.
Hal ini sangat berbahaya bagi pengendara 
ataupun pejalan kaki. Disarankan untuk mencari
zebracross atau jembatan penyebrangan sebelum
menyebrang"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1064.0
margin/right = 9627.0
margin/bottom = 1224.0
custom_constants/separation = 20
alignment = 0

[node name="MarginContainer4" type="MarginContainer" parent="Container/VBoxContainer/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 408.0
margin/bottom = 160.0
custom_constants/margin_right = 200
custom_constants/margin_left = 50

[node name="TextureButton" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer/MarginContainer4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 0.0
margin/right = 208.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButton1" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 428.0
margin/top = 0.0
margin/right = 589.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 609.0
margin/top = 0.0
margin/right = 768.0
margin/bottom = 160.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/VBoxContainer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/positionContainer = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="closer" type="TextureFrame" parent="Container"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 229.0
margin/right = 800.0
margin/bottom = 935.0
texture = ExtResource( 16 )
stretch_mode = 4

[node name="Panel" type="Panel" parent="Container/closer"]

visibility/opacity = 0.15
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -229.0
margin/right = 797.0
margin/bottom = 1050.0

[node name="yes" type="TextureButton" parent="Container/closer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 66.0
margin/top = 366.0
margin/right = 399.0
margin/bottom = 579.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="no" type="TextureButton" parent="Container/closer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 414.0
margin/top = 364.0
margin/right = 698.0
margin/bottom = 577.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 18 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/MarginContainer4/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/TextureButton1" to="." method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]

[connection signal="pressed" from="Container/closer/yes" to="." method="_on_yes_pressed"]

[connection signal="pressed" from="Container/closer/no" to="." method="_on_no_pressed"]


